--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <section class="bg-beige-100 flex justify-center">
 
       <!-- card -->
-      <article class="bg-white lg:w-[736px] lg:rounded-3xl lg:p-10 lg:my-5">
+      <article class="bg-white lg:w-[736px] lg:rounded-3xl lg:p-10 lg:mt-[123px]">
         <!-- image card -->
         <img class="lg:rounded-xl" src="./images/image-omelette.jpeg" alt="Image Card">
         <!-- info card -->
