--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
     <section class="bg-beige-100 flex justify-center">
 
       <!-- card -->
-      <article class="bg-white lg:w-[736px] lg:rounded-3xl lg:p-10 lg:mt-[123px]">
+      <article class="bg-white lg:w-[736px] lg:rounded-3xl lg:p-10 lg:my-[123px]">
         <!-- image card -->
         <img class="lg:rounded-xl" src="./images/image-omelette.jpeg" alt="Image Card">
         <!-- info card -->
-        <article class="bg-white mx-8 my-10 lg:mx-0">
+        <article class="bg-white mx-8 mt-10 lg:mx-0">
 
           <!-- head card -->
           <article class="mb-8">
@@ -98,7 +98,7 @@
 
           <!-- section nutrition -->
 
-          <article class="my-8">
+          <article class="mt-8">
             <h3>Nutrition</h3>
             <p class="font-outfit my-6">The table below shows nutritional values per serving without the additional
               fillings.
